# valuation-workbench

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  app.py  pyproject.toml
sample_outputs/: sample-ib-report.json  sample-ib-report.md  sample-report.md
scripts/: smoke_test.py
tests/: test_archetype.py  test_compatibility.py  test_core.py  test_dcf.py  test_exporter.py  test_forward.py  test_ib_engine.py  test_llm_parser.py  test_ratios.py  test_schemas.py  test_session.py  test_strategy.py  test_svg.py  test_v3_schema.py
valuation_workbench/: __init__.py  dynamic_schema.py  exporter.py  forward.py  models.py  session.py  svg_renderer.py
valuation_workbench/llm/: __init__.py  forward_prompt.py  narrative_prompt.py  parser.py  providers.py  schema_prompt.py
valuation_workbench/schemas/: __init__.py  crush.py  person.py  relationship.py  self_eval.py
valuation_workbench/valuation/: __init__.py  archetype.py  core.py  dcf.py  ib_engine.py  ratios.py  strategy.py
