[project]
name = "valuation-workbench"
version = "0.1.0"
description = "Wall Street IB-grade valuation workbench: DCF, P/E, P/B, EPS, sensitivity tables, forward-looking scenarios, archetype classification. Pure Python stdlib. Local-first."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["valuation_workbench*"]
