[project]
name = "valuation-workbench"
version = "0.3.1"
description = "IB-grade valuation workbench for partners and crushes. LLM-personalized 6-stage IPO-style questionnaire + three-method blended valuation (DCF + comparables + asset) + Monte-Carlo P10/P50/P90 + investment memo. Pure Python stdlib, local-first, browser-held LLM keys."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["valuation_workbench*"]
